--- a/printf/Makefile
+++ b/printf/Makefile
@@ -6,7 +6,7 @@
 #    By: dparada <dparada@student.42malaga.com>     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/11/23 10:41:42 by dparada           #+#    #+#              #
-#    Updated: 2023/12/01 10:36:34 by dparada          ###   ########.fr        #
+#    Updated: 2023/12/04 11:59:31 by dparada          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,7 +14,7 @@ NAME = libftprintf.a
 CC = gcc
 CFLAGS = -Wall -Wextra -Werror
 SOURCE = ft_printf.c ft_putchar.c ft_hexa.c ft_nbritoa.c ft_printf_utils.c\
-		 ft_itoa_u.c
+		 ft_itoa_u.c ft_punt.c
 
 OBJECTS = $(SOURCE:.c=.o)
 
